--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -1,9 +1,19 @@
-{{- if or .Params.author site.Params.author }}
+<!-- {{- if or .Params.author site.Params.author }}
 {{- $author := (.Params.author | default site.Params.author) }}
 {{- $author_type := (printf "%T" $author) }}
 {{- if (or (eq $author_type "[]string") (eq $author_type "[]interface {}")) }}
 {{- (delimit $author ", " ) }}
 {{- else }}
 {{- $author }}
+{{- end }}
+{{- end -}} -->
+
+{{- if or .Params.author site.Params.author }}
+{{- $author := (.Params.author | default site.Params.author) }}
+{{- $author_type := (printf "%T" $author) }}
+{{- if (or (eq $author_type "[]string") (eq $author_type "[]interface {}")) }}
+{{- delimit $author ", " | jsonify }}
+{{- else }}
+{{- $author | jsonify }}
 {{- end }}
 {{- end -}}
