--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -208,6 +208,7 @@
     border-radius: var(--radius);
     overflow-x: auto;
     word-break: break-all;
+    max-height: 25rem;
 }
 
 .post-content blockquote {
